--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
 
+    <meta name="theme-color" content="#5a189a">
+    <meta name="nsapplication-navbutton-color" content="#5a189a">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#5a189a">
+
     <title>Chordhouse</title>
 
     <!--FontAwesome-->
@@ -13,10 +17,8 @@
     <!-- Swiper -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"/>
 
-
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
 
     <!--User's Styles-->
     <link rel='stylesheet' href='css/styles.css'/>
@@ -30,7 +32,7 @@
               <i class="fas fa-bars"></i>
             </label>            
 
-            <a href='./index.html' class='navigator__logo'>
+            <a href='./index.html' class='logo'>
                 chord<strong>house.</strong>
             </a>
 
@@ -391,7 +393,7 @@
         </div>
     </section>
 
-    <section class="container">
+    <section class="container__1000px">
         <article class="section">
             <h2 class="section__title">Contacto</h2>
             <p class="section__subtitle">¿Alguna duda? Escríbenos, responderemos en breve.</p>
