Video reemplazado por imagen, Footer corregido y Javascript depurado

--- a/index.html
+++ b/index.html
@@ -65,15 +65,10 @@
                 aprende a tocar un instrumento a tu propio ritmo
             </p>
         </article>
-        <video
-            id="video"
-            preload
-            autoplay
-            muted
-            loop
+        <img
             class='hero__background'
-            src='./media/video-3.mp4'
-            alt='Hero video'
+            src='./img/study-girl.jpg'
+            alt='Background Image'
         >
     </section>
 <main>
