--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,11 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+        <meta name="theme-color" content="#5a189a">
+        <meta name="nsapplication-navbutton-color" content="#5a189a">
+        <meta name="apple-mobile-web-app-status-bar-style" content="#5a189a">
+
         <title>Chordhouse</title>
 
         <link
